# star-engine

./: Cargo.toml  README.md
examples/: event.rs  example.py  example.rs  network.rs  star_engine.py  test.rs
src/: lib.rs  logger.rs
src/ecs/: accessor.rs  event.rs  events.rs  mod.rs  network.rs  notifier.rs  scheduler.rs  shred_event.rs  system.rs  world.rs
src/network/: mod.rs
src/script/: component.rs  mod.rs  system.rs
src/tests/network/: mod.rs
