[package]
name = "star_engine"
version = "0.1.0"
authors = ["Jackson Lewis <st.japa6@gmail.com>"]
edition = "2018"

[dependencies]
specs = "0.14.2"
specs-derive = "0.4.0"
shred = "0.8.0"
shred-derive = "0.6.0"
cascade = "0.1.3"
tokio = "0.2.0-alpha.6"
futures = "0.3.1"
bytes = "0.4.12"
cpython = "0.3.0"
lazy_static = "1.4.0"